hphp/hack/test/ifc/check/exceptions.php.exp
File "exceptions.php", line 12, characters 1-108:
Data with policy PRIVATE appears in context PUBLIC. (Typing[4379])
